--- a/resources/app.conf
+++ b/resources/app.conf
@@ -1,5 +1,6 @@
 [cli]
-apps = list: ${cli_config_default:apps}, app
+apps = list: ${cli_config_default:apps}, show_config_cli, app
+app_removes = list: list_actions_cli
 cleanups = list: ${cli_config_default:cleanups}, app, app_decorator
 
 [import]
@@ -27,4 +28,4 @@ class_name = zensols.amrspring.Application
 client = instance: amr_spring_client
 
 [app_decorator]
-option_excludes = set: amr_spring_client
+option_excludes = set: client
