cache results in server; client has first class prediction object

--- a/resources/app.conf
+++ b/resources/app.conf
@@ -29,3 +29,4 @@ client = instance: amr_spring_client
 
 [app_decorator]
 option_excludes = set: client
+option_overrides = dict: {'text_or_file': {'long_name': 'text'}}
