--- a/resources/app.conf
+++ b/resources/app.conf
@@ -1,7 +1,7 @@
 [cli]
 apps = list: ${cli_config_default:apps}, show_config_cli, app
 app_removes = list: list_actions_cli
-cleanups = list: ${cli_config_default:cleanups}, app, app_decorator
+cleanups = list: ${cli_config_default:cleanups}, app_decorator
 
 [import]
 config_files = list:
